--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     background-image: url(bw\ building.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    padding: 25px 10px;
+    padding: 25px 5px;
 }
 .head{
     color: rgb(241 173 14);
@@ -11,9 +11,12 @@
     font-weight: bold;
     font-size: 50px;
 }
-.link1{
-    color: rgb(54, 50, 50);
+.nav{
+    color: black;
     font-weight: bold;
+}
+.nav:hover{
+    color: rgb(241 173 14);
 }
 .inbox1{
     background-color: rgba(11, 14, 18, 0.678);
